# kobo-sudoku

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
cmake/: kobo-toolchain.cmake
docs/: building.md  gameplay.md  installation.md  settings.md
specs/001-kobo-sudoku/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kobo-sudoku/checklists/: requirements.md
specs/001-kobo-sudoku/contracts/: core-model.md  install-layout.md  platform-abstraction.md  save-format.md
specs/002-nickelmenu-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nickelmenu-integration/checklists/: requirements.md
specs/002-nickelmenu-integration/contracts/: nickelmenu-entry.md
src/: main.cpp
src/core/: board.cpp  board.h  difficulty.cpp  difficulty.h  generator.cpp  generator.h  session.cpp  session.h  solver.cpp  solver.h  stats.cpp  stats.h  types.h
src/persist/: paths.cpp  paths.h  store.cpp  store.h
src/platform/: canvas_renderer.h  input.h  renderer.h  softcanvas.cpp  softcanvas.h
src/platform/kobo/: evdev_touch.cpp  evdev_touch.h  fbink_renderer.cpp  fbink_renderer.h
src/platform/sdl/: mouse_touch.cpp  mouse_touch.h  sdl_renderer.cpp  sdl_renderer.h
src/ui/: app.h  theme.cpp  theme.h  widgets.cpp  widgets.h
src/ui/screens/: game_screen.cpp  game_screen.h  menu_screen.cpp  menu_screen.h  screen.h  settings_screen.cpp  settings_screen.h  stats_screen.cpp  stats_screen.h
tests/: fixtures.h  test_difficulty.cpp  test_generator.cpp  test_pencilmarks.cpp  test_persist.cpp  test_rules.cpp  test_smoke.cpp
tools/: build-fbink.sh  package.sh
